--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+
+.DS_store
+.br
+.gz
+
+# Ignore staticfiles folder
+commerce/staticfiles/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -150,3 +157,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
